# baerscript

./: Cargo.toml  DOCUMENTATION.md  README.md
.github/workflows/: release.yml
cli/: Cargo.toml
cli/src/: cli.rs  main.rs
examples/: 1char.bs  5char.bs  loop.bs  print.bs
runtime/: Cargo.toml
runtime/src/: grid.rs  lib.rs  parser.rs  token.rs
runtime/tests/: empty_grid.rs
src/: cli.rs  grid.rs  main.rs  parser.rs  reader.rs  token.rs
