[package]
name = "baerscript"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
clap = { version = "3.2.22", features=["derive"] }
console = "0.15.1"

[profile.release]
strip = "debuginfo"

[profile.dev]
opt-level = 1
debug = 2
