[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = "debuginfo"

[profile.dev]
opt-level = 1
debug = 2

[dependencies]
anyhow = "1.0.65"
clap = { version = "3.2.22", features=["derive"] }
runtime = { path = "../runtime" }

[[bin]]
name = "baerscript"
path = "src/main.rs"