[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "baerscript"
path = "src/main.rs"

[profile.release]
strip = "debuginfo"

[profile.dev]
opt-level = 1
debug = 2

[dependencies]
anyhow = "1.0.65"
clap = { version = "3.2.22", features=["derive"] }
runtime = { path = "../runtime" }
