[package]
name = "cli"
version = "0.1.1"
edition = "2021"
authors = ["Matthew Polak <contact@matteopolak.com>"]
description = "A command-line interface for the Baerscript interpreter"

[[bin]]
name = "baerscript"
path = "src/main.rs"

[profile.release]
strip = "debuginfo"

[profile.dev]
opt-level = 1
debug = 2

[dependencies]
anyhow = "1.0.65"
clap = { version = "4.0.26", features=["derive"] }
runtime = { path = "../runtime" }
